--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
-# Auto detect text files and perform LF normalization
+# default behaviour
 * text=auto
+
+# S1/2 Script files must ALWAYS use crlf line endings
+*.txt text eol=crlf
